# auth_basics_api

./: .dockerignore  .env  .env.development  .gitignore  POETRY.md  README.md  SSHKEY.md  commit.sh  pyproject.toml  vercel.json
auth_app/: .env.development  main.py
auth_app/application/admins/: dto.py  use_cases.py
auth_app/config/: __init__.py  constants.py  settings.py
auth_app/domain/admins/: entities.py  enums.py  repositories.py
auth_app/infrastructure/cache/: __init__.py  redis.py
auth_app/infrastructure/db/: __init__.py  base.py  models.py  utils.py
auth_app/infrastructure/repositories/: admin_repository.py
auth_app/infrastructure/security/: jwt.py
auth_app/interfaces/api/: app.py  dependencies.py
auth_app/interfaces/api/routers/: __init__.py  admin.py  auth.py
auth_app/shared/: auth_dependencies.py  email_notifications.py  i18n.py  logging.py  rate_limit.py  security_lock.py  system_bootstrap.py
auth_app/shared/localization/: en.json  pt_br.json
auth_app/template_email/: email_notifications.html  password_changed.html  password_recovery.html  security_notifications.html
backup/: .env_1
backups/: env_2.py  vercel_2.json
docs/: API.md  DEPENDENCIES.md  POETRY.md  POSTGRES.md  REDIS.md  SECRET.md  SSHKEY.md  TOKEN.md  UVICORN.md  VERCEL.md
migrations/: env.py
migrations/versions/: 60669cc6b722_init.py
tests/: conftest.py  test_auth.py
tools/: app_ip.py  app_kill.sh  app_rich.py  compose.yaml  docker_clear.sh  docker_run.sh  uvicorn_start.sh  versel_env.sh
