[project]
name = "auth-app"
version = "0.1.0"
description = ""
authors = [
    {name = "luis.fernando.pereira@gmail.com",email = "luis.fernando.pereira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
