[project]
name = "auth-app"
version = "0.1.0"
description = ""
authors = [
    {name = "luis.fernando.pereira@gmail.com",email = "luis.fernando.pereira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic[email] (>=2.12.2,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
taskipy = "^1.14.1"

